--- a/1130_dragNdrop/index.html
+++ b/1130_dragNdrop/index.html
@@ -7,6 +7,7 @@
     <title>Drag & Drop</title>
     <link rel="stylesheet" href="style.css">
     <script src="/jquery-3.6.1.min.js"></script>
+    <script src="app.js"></script>
 </head>
 <body>
     <h1>Drag & Drop test</h1><hr>
@@ -20,24 +21,24 @@
         </div>
         <div class="box">
             2
-            <div class="card">c21</div>
-            <div class="card">c22</div>
-            <div class="card">c23</div>
-            <div class="card">c24</div>
+            <div draggable="true" class="card">c21</div>
+            <div draggable="true" class="card">c22</div>
+            <div draggable="true" class="card">c23</div>
+            <div draggable="true" class="card">c24</div>
         </div>
         <div class="box">
             3
-            <div class="card">c31</div>
-            <div class="card">c32</div>
-            <div class="card">c33</div>
-            <div class="card">c34</div>
+            <div draggable="true" class="card">c31</div>
+            <div draggable="true" class="card">c32</div>
+            <div draggable="true" class="card">c33</div>
+            <div draggable="true" class="card">c34</div>
         </div>
         <div class="box">
             4
-            <div class="card">c41</div>
-            <div class="card">c42</div>
-            <div class="card">c43</div>
-            <div class="card">c44</div>
+            <div draggable="true" class="card">c41</div>
+            <div draggable="true" class="card">c42</div>
+            <div draggable="true" class="card">c43</div>
+            <div draggable="true" class="card">c44</div>
         </div>
     </div> <!-- contanor -->
 
